# omdb-rs

./: .travis.yml  Cargo.toml  README.md  build.rs
src/: error.rs  lib.rs
src/query/: mod.rs  model.rs
