[package]
name = "omdb"
version = "0.2.1"
authors = ["Brandon Aldrich <brandon@aldr.io>"]
description = "OMDb API for Rust"
documentation = "https://docs.rs/crate/omdb"
homepage = "https://github.com/aldrio/omdb-rs"
repository = "https://github.com/aldrio/omdb-rs"
readme = "README.md"
license = "MIT"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
reqwest = "0.9"