[package]
name = "omdb"
version = "0.3.2"
authors = ["Brandon Aldrich <brandon@aldr.io>"]
description = "OMDb API for Rust"
documentation = "https://docs.rs/crate/omdb"
homepage = "https://github.com/aldrio/omdb-rs"
repository = "https://github.com/aldrio/omdb-rs"
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies.reqwest]
version = "~0.11"
default_features = false
features = ["rustls-tls", "json"]

[dependencies.serde]
features = ["derive"]
version = "~1.0"

[dependencies.serde_json]
version = "~1.0"

[dev-dependencies.tokio]
features = ["macros"]
version = "~1.0"
